添加动画效果

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="music">
 			<img src="../image/music_pointer.png">
-			<img src="../image/music_disc.png">
+			<img class="play" src="../image/music_disc.png">
 		</div>
 
 		<div class="page" id="page1">
