--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 	<html lang="Zh-cn">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="X-UA-Compatible" content="IE=edge, chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1,maximum-scale=1,user-scalable=no">
+		<meta name="format-detection" content="telephone=no">
 		<title>测试</title>
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="css/style.css">
+		<script type="text/javascript" src="js/index.js"></script>
 	</head>
 	<body>
-		<div id="music">
-			<img src="../image/music_pointer.png">
-			<img class="play" src="../image/music_disc.png">
-		</div>
-
 		<div class="page" id="page1">
 			<div class="bg"></div>
 			<div class="p1_lantern">点击屏幕<br>开启2018好运</div>
@@ -18,18 +17,25 @@
 			<div class="p1_words">2018年新年特献</div>
 		</div>
 		<div class="page" id="page2">
+			<div class="bg p2_loading"></div>
 			<div class="bg"></div>
 			<div class="p2_circle"></div>
 			<div class="p2_2016"></div>
 		</div>
 		<div class="page" id="page3">
 			<div class="bg"></div>
-			<div class="p3_logo"></div>
+			<div class="p3_logo" id="logo"></div>
 			<div class="p3_title"></div>
 			<div class="p3_second"></div>
 			<div class="p3_first"></div>			
 			<div class="p3_blessing"></div>
 		</div>
-
+		<div class="music">
+			<img src="image/music_pointer.png">
+			<img class="play" id="music" src="image/music_disc.png">
+		</div>
+		<audio autoplay="true">
+			<source src="audio/2855.wav" type="audio/mpeg">
+		</audio>
 	</body>
 	</html>
