--- a/imagemontage/index.html
+++ b/imagemontage/index.html
@@ -3,71 +3,29 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Html5 Canvas 实现图片合成</title>
-    <link rel="stylesheet" href="http://www.loveqiao.com/css/public.css">
-    <style>
-    img {
-        border: solid 1px #ddd;
-    }
-    </style>
+    <title>图片合成</title>
+<!--     <link rel="stylesheet" href="http://www.loveqiao.com/css/public.css"> -->
+   
 </head>
 
 <body>
-    <div align="center">
+    <!-- <div align="center">
         <img src="img_clothes/img1.png" width="300">
         <img src="img_clothes/img2.png" width="300">
         <img src="img_clothes/img3.png" width="300">
         <img src="img_clothes/img4.png" width="300">
+    </div> -->
+    <input type="file" id="uploadImg">
+    <div class="origImg" id="origImg">
     </div>
+    <span>小时：（输入范围1-24）</span>
+    <input type="text" id="hourTime">
     <div id="imgBox" align="center">
-        <input type="button" value="一键合成" onClick="hecheng()">
+        <input type="button" value="一键生成" onclick="hecheng()">
     </div>
-    <script>
-    /*
-       @作者：外号老徐
-       @邮箱：442413729@qq.com
-       @网址：http://www.loveqiao.com
-    */
-    function hecheng() {
-        draw(function() {
-            document.getElementById('imgBox').innerHTML = '<p style="padding:10px 0">合成图片成功！可以鼠标另存图片查看我是否是一张图片~~！</p><img src="' + base64[0] + '">';
-        })
-    }
-
-    var data = ['img_clothes/img1.png', 'img_clothes/img2.png', 'img_clothes/img3.png', 'img_clothes/img4.png'],
-        base64 = [];
-
-    function draw(fn) {
-        var c = document.createElement('canvas'),
-            ctx = c.getContext('2d'),
-            len = data.length;
-        c.width = 290;
-        c.height = 290;
-        ctx.rect(0, 0, c.width, c.height);
-        ctx.fillStyle = '#fff';
-        ctx.fill();
-
-        function drawing(n) {
-            if (n < len) {
-                var img = new Image;
-                //img.crossOrigin = 'Anonymous'; //解决跨域
-                img.src = data[n];
-                img.onload = function() {
-                    ctx.drawImage(img, 0, 0, 290, 290);
-                    drawing(n + 1); //递归
-                }
-            } else {
-                //保存生成作品图片
-                base64.push(c.toDataURL("image/jpeg", 0.8));
-                //alert(JSON.stringify(base64));
-                fn();
-            }
-        }
-        drawing(0);
-    }
-    </script>
-    <script src="http://cdn.loveqiao.com/jquery.js"></script>
-    <script src="http://www.loveqiao.com/js/public.js"></script>
+     <script type="text/javascript" src="js/index.js"></script>
+    <!-- <script src="http://cdn.loveqiao.com/jquery.js"></script> -->
+ <!--    <script src="http://www.loveqiao.com/js/public.js"></script> -->
 </body>
 
 </html>
