--- a/imagemontage/index.html
+++ b/imagemontage/index.html
@@ -16,7 +16,7 @@
         <img src="img_clothes/img4.png" width="300">
     </div> -->
     <input type="file" id="uploadImg">
-    <div class="origImg" id="origImg">
+    <div id="origImgDiv">
     </div>
     <span>小时：（输入范围1-24）</span>
     <input type="text" id="hourTime">
