--- a/imagemontage/index.html
+++ b/imagemontage/index.html
@@ -20,6 +20,10 @@
     </div>
     <span>小时：（输入范围1-241）</span>
     <input type="text" id="hourTime">
+    <span>分钟：（输入范围1-59）</span>
+    <input type="text" id="minTime">
+    <span>秒：（输入范围1-59）</span>
+    <input type="text" id="secTime">
     <div id="imgBox" align="center">
         <input type="button" value="一键生成" onclick="hecheng()">
     </div>
