delete psd file

--- a/imagemontage/index.html
+++ b/imagemontage/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>图片合成</title>
-<!--     <link rel="stylesheet" href="http://www.loveqiao.com/css/public.css"> -->
-   
+    <!--     <link rel="stylesheet" href="http://www.loveqiao.com/css/public.css"> -->
 </head>
 
 <body>
@@ -18,7 +17,11 @@
     <input type="file" id="uploadImg">
     <div id="origImgDiv">
     </div>
-    <span>小时：（输入范围1-241）</span>
+    <span>月：（输入范围1-12）</span>
+    <input type="text" id="month">
+    <span>日：（输入范围1-31）</span>
+    <input type="text" id="day">
+    <span>小时：（输入范围1-24）</span>
     <input type="text" id="hourTime">
     <span>分钟：（输入范围1-59）</span>
     <input type="text" id="minTime">
@@ -27,9 +30,9 @@
     <div id="imgBox" align="center">
         <input type="button" value="一键生成" onclick="hecheng()">
     </div>
-     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <!-- <script src="http://cdn.loveqiao.com/jquery.js"></script> -->
- <!--    <script src="http://www.loveqiao.com/js/public.js"></script> -->
+    <!--    <script src="http://www.loveqiao.com/js/public.js"></script> -->
 </body>
 
 </html>
